# jm-mcp-server

./: ANDROID_SETUP.md  LICENSE  README.md  debug_directory_detection.py  op.yml  pyproject.toml  test_android.py
src/: server.py
