[project]
name = "jm-mcp-server"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "jmcomic",
    "Pillow",
    "img2pdf",
    "pikepdf",
    "lxml",
    "pyyaml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
